# TechTask_by_TeamStroyIt

./: Dockerfile  INSTALLATION.md  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt
app/: db.py  main.py
app/templates/: active_repo.html  layout.html  repos.html
app/templates/components/: nav.html
